# telemetry-collector

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docker/supervision/: prometheus.yml  prometheus.yml.tpl
docker/supervision/grafana/alerting/: battery_alert.json  connexion_alert.json  contact-points.json
docker/supervision/grafana/dashboards/: memory_usage_dashboard.json  network_usage.json
docker/supervision/grafana/dashboards/status/: battery_usage.json  connexion_usage.json
docker/supervision/grafana/dashboards/system/: cpu_usage_dashboard.json  memory_usage_dashboard.json
docker/supervision/grafana/provisioning/dashboards/: dashboards.yml
src/: config.rs  lib.rs  main.rs  metrics.rs  server.rs  status_metrics.rs  system_metrics.rs  types.rs
tests/: config.rs  integration.rs
