[package]
name = "telemetry-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
http = "1.3.1"
once_cell = "1.21.3"
prometheus = "0.14.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.35.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"
